Fix the source overflow CSS element name

--- a/org/style.css
+++ b/org/style.css
@@ -37,7 +37,7 @@ p {
 }
 
 pre.src {
-    overflow: hidden;
+    overflow: auto;
 }
 
 ul.navbar {
